@@ -398,14 +398,14 @@ string *explode(string, string);
 string  implode(string *, string);
 string  lower_case(string);
 string  make_shared_string(string) "no longer useful";
-string  md5(int*|string);
+string  md5(int*|string, void|int);
 string  md5_crypt(string, string|int default: F_CONST0);
 string *regexp(string *, string, int default: F_CONST0);
 string *regexplode(string, string, int default: F_CONST0);
 string  regreplace(string,string,closure|string,int);
 int     regexp_package();
 mixed   regmatch(string,string, void|int, void|int);
-string  sha1(int*|string);
+string  sha1(int*|string, void|int);
 void    printf(string, ...);
 string  sprintf(string, ...);
 int     strstr(string, string, int default: F_CONST0);
